# Rabbit_robocon2023

./: README.md
PID_driver_i2c/: .cproject  .mxproject  .project  PID_driver_i2c Debug.launch  PID_driver_i2c.ioc
PID_driver_i2c/Core/Inc/: PID.h  main.h  stm32f1xx_it.h
PID_driver_i2c/Core/Src/: PID.c  can.c  gpio.c  i2c.c  main.c  stm32f1xx_it.c  tim.c
PID_driver_i2c/Debug/: PID_driver_i2c.elf  PID_driver_i2c.list  PID_driver_i2c.map  makefile  objects.list
can_odometry/can_odometry/: odometry.py
elephant/elephant_imu/: package.xml  setup.py
elephant/elephant_localization/: package.xml  setup.py
imu_n100/: CMakeLists.txt  package.xml  test.py
imu_n100/include/imu_n100/: data_struct.h  imu_driver.h
imu_n100/launch/: imu.launch.py
imu_n100/src/: crc_table.cpp  imu_driver.cpp
rabbit_can/: package.xml  setup.cfg  setup.py
rabbit_can/model_kinematic/: kinematic.py
rabbit_can/rabbit_can/: can_node.py  can_pubsub.py  external_rotary2.py  odometry.py  teleop_joy.py
rabbit_control/: package.xml  setup.cfg  setup.py
rabbit_control/launch/: nmpc_params.launch.py  nmpc_params3.launch.py  nmpc_rabbit.launch.py
rabbit_control/params/: nmpc_params.yaml
rabbit_control/rabbit_control/: beizer_node.py  beizer_node2.py  beizer_node3.py  beizer_params.py  bezier_path.py  nmpc_meca.py  nmpc_meca_v2.py  nmpc_omni.py  nmpc_omni_v2.py  nmpc_params.py  nmpc_params_v2.py  nmpc_params_v3.py  nmpc_solver.py  path1.csv  path2.csv  pole_aiming.py  rabbit_meca.py  test_imu.py
rabbit_control/test/: nmpc_solver.py  rabbit_omni.py  test_path2.py  test_path3.py  test_path4.py
rabbit_controller/: package.xml  setup.cfg  setup.py
rabbit_controller/MECANUM/: mpc_mecanum.cpp
rabbit_controller/MECANUM/include/: mpc_mecanum.hpp
rabbit_controller/MECANUM/src/: mpc_mecanum.cpp
rabbit_controller/mpc_action/: CMakeLists.txt  package.xml
rabbit_controller/mpc_action/action/: MPCAction.action
rabbit_controller/mpc_action/include/mpc_action/: auto_omni.hpp  ipopt_mpc.hpp
rabbit_controller/mpc_action/src/: auto_omni.cpp  mpc_node.cpp  pub_sub.cpp
rabbit_controller/ocp_cpp/: CMakeLists.txt  package.xml
rabbit_controller/ocp_cpp/src/: auto_mecanum.cpp  fibonacci_action_server.cpp  mpc_controller.cpp  mpc_node.cpp  pub_sub.cpp
rabbit_controller/ocp_cpp/test/: auto_mecanum.cpp  auto_mecanum.hpp  debug  debug.cpp  test_meca.cpp
rabbit_controller/ocp_robocon2023/: package.xml  setup.cfg  setup.py
rabbit_controller/ocp_robocon2023/action/: mpc_action.action
rabbit_controller/rabbit_can/: setup.py
rabbit_controller/rabbit_imu/: setup.py
rabbit_controller/rabbit_localization/: setup.py
rabbit_controller/rabbit_remote/: setup.py
rabbit_controller/rabbit_shooter/: package.xml  setup.py
rabbit_dnn/cv_dnn/: CMakeLists.txt  package.xml
rabbit_dnn/cv_dnn/src/: camera_node.cpp  (+3 more)
rabbit_dnn/cv_robocon2023/: package.xml  setup.cfg  setup.py
rabbit_dnn/rabbit_dnn/: CMakeLists.txt  package.xml
rabbit_dnn/yolov5_msgs/: CMakeLists.txt  package.xml
rabbit_imu/: package.xml  setup.cfg
rabbit_imu/launch/: imu.launch.py
rabbit_imu/rabbit_imu/: imu.py
rabbit_launch/: package.xml  setup.cfg  setup.py
rabbit_launch/launch/: nmpc_node.launch.py  rabbit.launch.py  test_param.launch.py
rabbit_launch/params/: nmpc_params.yaml
rabbit_launch/rabbit_launch/: test_params.py
rabbit_localization/: package.xml  setup.cfg  setup.py
rabbit_localization/model/: mhe.py  rabbit_mode_diff.py  rabbit_model.py
rabbit_localization/rabbit_localization/: mhe_pubsub.py  nmhe_meca.py  nmhe_solver.py  rabbit_meca.py  testing_yaw.py
rabbit_remote/: package.xml  setup.cfg  setup.py
rabbit_remote/launch/: ps3_remote.launch.py  ps4_remote.launch.py
rabbit_remote/rabbit_remote/: ps3_nrf.py  ps4_control.py  rabbit_meca.py
rabbit_shooter/: package.xml  setup.cfg  setup.py
rabbit_shooter/config/: data.yaml  data1.yaml  data2.yaml  param.yaml
rabbit_shooter/rabbit_shooter/: can_shooter.py  data_shooter.py  param_shooter.py  run_shooter.py  shoot_command.py  shooter.py  shooter_test.py
rabbit_shooter/shooter/: RR_shooter.py  shooter_test.py
(+1474 files in other folders)
